card finished. vars.css extracted (#FIXME: card-content overlap)

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,3 @@
-
-:root {
-  /* Spacing: */
-  --spacing-xtiny: 4px;
-  --spacing-tiny: 8px;
-  --spacing-small: 12px;
-  --spacing-mini: 16px;
-  --spacing-base: 24px;
-  --spacing-medium: 32px;
-  --spacing-large: 48px;
-
-  /* Colors: */
-  --color-background: #f7f7f7;
-  --color-white: #ffffff;
-  --color-grass: #74cb48;
-  --color-poisson: #a43e9e;
-
-  --color-dark-gray: #212121;
-  --color-medium-gray: #666666;
-}
-
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
@@ -45,30 +24,31 @@ body {
 .card__header {
   margin-top: var(--spacing-base);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  margin: var(--spacing-base) var(--spacing-small) 0 var(--spacing-small);
 }
 
 .card__name {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: var(--font-size-big);
+  line-height: var(--line-height-big);
 }
 
 .card__number {
-  font-size: 12px;
-  line-height: 32px;
+  font-size: var(--font-size-small);
+  line-height: var(--line-height-big);
 }
 
 .card__image {
+  min-width: 150px;
   margin: auto;
   position: relative;
-  top: 50px;
+  top: var(--spacing-mini);
   z-index: 1;
 }
 
 .card__content {
   /* TODO: flex? with position? */
-  padding: 50px 0 0 0;
-  position: relative;
+  position: relative; /*FIXME */
   width:  290px;
   height: 240px;
   margin-left:   var(--spacing-xtiny);
@@ -101,7 +81,7 @@ body {
 .card__tag {
   display: flex;
   padding: 2px var(--spacing-small);
-  font-size: 10px;
+  font-size: var(--font-size-tiny);
   border-radius: var(--spacing-tiny);
 }
 
@@ -130,19 +110,19 @@ body {
 }
 
 .measure__value {
-  font-size: 10px;
-  line-height: 16px;
+  font-size: var(--font-size-tiny);
+  line-height: var(--line-height-medium);
   padding-left: var(--spacing-tiny);
 }
 
 .measure__name {
-  font-size: 8px;
+  font-size: var(--font-size-xtiny);
   color: var(--color-medium-gray);
 }
 
 .card__description {
-  font-size: 10px;
-  line-height: 16px;
+  font-size: var(--font-size-tiny);
+  line-height: var(--line-height-medium);
   text-align: justify;
   margin-left:   var(--spacing-base);
   margin-right:  var(--spacing-base);
